# Prime_Pizza_Backend

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  api.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep  48fcbb9cf907_order_management_checkout_timeline.py  6335ba01e31c_user_module_profile_addresses_.py  7e1e98e95ace_soft_delete_aware_unique_indexes.py  89e7910d3eed_cart_wishlist_checkout_preparation.py  a1b2c3d4e5f6_production_hardening_composite_indexes.py  b2c3d4e5f6a7_email_password_auth_and_chef_role.py  c3d4e5f6a7b8_brevo_email_templates_and_contact.py  cb465f3c33d6_product_module_catalog_extensions.py  d4e5f6a7b8c9_order_gps_coordinates.py  d789ba8517ef_email_logs_transactional_notifications.py  ed72b3fc94e8_create_prime_pizza_schema.py
app/: __init__.py  main.py
app/api/: router.py
app/authorization/: __init__.py  ownership.py  permissions.py  policy.py  roles.py
app/common/: __init__.py  constants.py  enums.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py
app/data_mirror/: __init__.py  base.py  orders.py  users.py
app/database/: __init__.py  (+4 more)
docs/: BACKUP.md  PRODUCTION_READINESS.md  admin.md  architecture.md  authentication.md  authorization.md  cart.md  catalog.md  database.md  emails.md  orders.md  production-audit.md  production-hardening.md  users.md
scripts/: brevo_email_audit.py  e2e_production_audit.py  generate_api_md.py  validate_env.py
tests/: conftest.py
(+246 files in other folders)
